--- a/bib/book.bib
+++ b/bib/book.bib
@@ -1242,6 +1242,18 @@
 	Volume = {33},
 	Year = {2014}}
 
+
+
+@article{bairdetal2018,
+	Author = {Sarah Baird and J. Aislinn Bohren and Craig McIntosh and Berk Ozler},
+	Journal = {{Review of Economics \& Statistics}},
+	Number = {100},
+	Volume = {5},
+	pages = {844--860},
+	Title = {{Optimal Design of Experiments in the Presence of Interference}},
+	Year = {2018}}
+
+
 @unpublished{Zaks2013Rivals,
 	Author = {Zaks, Sherry},
 	Note = {Paper prepared for the Short Course 1 on Multi-Method Research, 2012 Annual Meeting of the American 		Political Science Association: New Orleans, Louisiana.},
