--- a/bib/book.bib
+++ b/bib/book.bib
@@ -1242,7 +1242,16 @@
 	Volume = {33},
 	Year = {2014}}
 
-
+@article{asunka2019, 
+  title={Electoral Fraud or Violence: The Effect of Observers on Party Manipulation Strategies}, 
+  volume={49}, 
+  DOI={10.1017/S0007123416000491}, 
+  number={1}, 
+  journal={British Journal of Political Science}, 
+  publisher={Cambridge University Press}, 
+  author={Asunka, Joseph and Brierley, Sarah and Golden, Miriam and Kramon, Eric and Ofosu, George}, 
+  year={2019}, 
+  pages={129–151}}
 
 @article{bairdetal2018,
 	Author = {Sarah Baird and J. Aislinn Bohren and Craig McIntosh and Berk Ozler},
